[package]
name = "fuzz_lazy_static"
version = "0.1.0"
authors = ["nobody <nobody@nowhere>"]
edition = "2018"

[dependencies]
afl = { version = "0.5.2" }
lazy_static = { version = "1.4.0" }
resettable_lazy_static = { git = "https://github.com/smoelius/resettable-lazy-static.rs", package = "lazy_static" }

[features]
delay = []
reset = []
