[package]
name = "fuzz_lazy_static"
version = "0.1.0"
authors = ["nobody <nobody@nowhere>"]
edition = "2018"

[dependencies]
afl = { git = "https://github.com/smoelius/afl.rs" }
lazy_static = { version = "1.4.0" }

[features]
delay = []
panic = []
reset = ["afl/reset_lazy_static"]

[patch.crates-io]
lazy_static = { git = "https://github.com/rust-fuzz/resettable-lazy-static.rs" }
